[workspace]
members = [
    ".",
    "mcp",
]

[package]
name = "gpukill"
version = "0.1.20"
edition = "2021"
authors = ["Kage <info@treadie.com>"]
description = "A CLI tool for GPU management and monitoring supporting NVIDIA, AMD, Intel, and Apple Silicon GPUs"
license = "FSL-1.1-MIT"
repository = "https://github.com/treadiehq/gpu-kill"
keywords = ["gpu", "nvidia", "amd", "intel", "apple", "metal", "nvml", "rocm", "cli", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gpukill"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tabled = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nvml-wrapper = "0.11"
sysinfo = "0.30"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.27", features = ["process", "signal"] }
tokio = { version = "1.0", features = ["rt", "time", "process", "net", "fs"] }
anyhow = "1.0"
hostname = "0.3"
libc = "0.2"
toml = "0.8"
dirs = "5.0"
regex = "1.10"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# HTTP server dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"

# SSH remote support (using system SSH for now)
# ssh2 = "0.9"
# rpassword = "7.3"
shell-escape = "0.1"


# Apple Silicon GPU support
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
io-kit-sys = "0.2"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[build-dependencies]
chrono = "0.4"

[features]
default = []
mock_nvml = []
hotaisle = []

[profile.release]
# Optimized for faster builds during development
lto = "thin"  # Much faster than "true" (fat LTO)
codegen-units = 4  # Allow parallel codegen for faster builds
panic = "abort"
strip = true

# Fast release profile for development
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2  # Slightly less optimization for speed

# Maximum optimization profile for final releases
[profile.release-max]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
